[package]
name = "datus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-cors = "0.6.2"
actix-rt = "2.7.0"
bigdecimal = "=0.1.0"
borsh = "0.7.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15.0"
diesel = { version = "1.4.7", features = ["postgres", "numeric", "serde_json", "chrono", "r2d2"] }
diesel-derive-enum = { git = "https://github.com/khorolets/diesel-derive-enum.git", branch = "lookup-hack", features = ["postgres"] }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.6", features = ["serde", "v4"] }